--- a/index.html
+++ b/index.html
@@ -7,45 +7,42 @@
 </head>
 <body>
 
-	<!--global-variables-->
+<!--global-variables-->
 
 
+<!--/global-variables-->
 
-	<!--/global-variables-->
+<!--tabs-->
 
-	<!--tabs-->
-
-	<section data-exalt="tabs">
-		<input type="radio" name="tabs" id="tab00" value="tab00" checked="checked" />
-		<input type="radio" name="tabs" id="tab01" value="tab01" />
-		<input type="radio" name="tabs" id="tab02" value="tab02" />
-		<input type="radio" name="tabs" id="tab03" value="tab03" />
-		<input type="radio" name="tabs" id="tab04" value="tab04" />
-		<nav>
-			<label for="tab00">Tab #00 title title</label>
-			<label for="tab01">Tab #01 title title</label>
-			<label for="tab02">Tab #02 title title</label>
-			<label for="tab03">Tab #03 title title</label>
-			<label for="tab04">Tab #04 title title</label>
-		</nav>
-		<section>
-			<article id="tab00-content">
-				Content tab 00
-			</article>
-			<article id="tab01-content">
-				Content tab 01
-			</article>
-			<article id="tab02-content">
-				Content tab 02
-			</article>
-			<article id="tab03-content">
-				Content tab 03
-			</article>
-			<article id="tab04-content">
-				Content tab 04
-			</article>
-		</section>
-	</section>
+<section data-exalt="tabs">
+	<input type="radio" name="tabs" id="tab00" value="tab00" checked="checked"/>
+	<input type="radio" name="tabs" id="tab01" value="tab01"/>
+	<input type="radio" name="tabs" id="tab02" value="tab02"/>
+	<ul class="nav nav-tabs">
+		<li role="presentation">
+			<label for="tab00">Home</label>
+		</li>
+		<li role="presentation">
+			<label for="tab01">Profile</label>
+		</li>
+		<li role="presentation">
+			<label for="tab02">Messages</label>
+		</li>
+	</ul>
+	<div class="tab-content">
+		<div class="tab-pane fade">
+			Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.
+		</div>
+		<div class="tab-pane fade">
+			Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.
+		</div>
+		<div class="tab-pane fade">
+			tab02
+			<h3>Menu 2</h3>
+			<p>Some content in menu 2.</p>
+		</div>
+	</div>
+</section>
 
 </body>
 </html>
