--- a/index.html
+++ b/index.html
@@ -15,18 +15,30 @@
 <!--tabs-->
 
 <section data-exalt="tabs">
-	<input type="radio" name="tabs" id="tab00" value="tab00" checked="checked"/>
-	<input type="radio" name="tabs" id="tab01" value="tab01"/>
-	<input type="radio" name="tabs" id="tab02" value="tab02"/>
+	<input class="exalt" type="radio" name="tabs" id="tab00" value="tab00" checked="checked"/>
+	<input class="exalt" type="radio" name="tabs" id="tab01" value="tab01"/>
+	<input class="exalt" type="radio" name="tabs" id="tab02" value="tab02"/>
+	<input class="exalt" type="radio" name="tabs" id="tab03" value="tab03"/>
+	<input class="exalt" type="radio" name="tabs" id="tab04" value="tab04"/>
 	<ul class="nav nav-tabs">
-		<li role="presentation">
+		<li>
 			<label for="tab00">Home</label>
 		</li>
-		<li role="presentation">
+		<li>
 			<label for="tab01">Profile</label>
 		</li>
-		<li role="presentation">
-			<label for="tab02">Messages</label>
+		<li class="dropdown">
+			<a href="#">
+				Dropdown <span class="caret"></span>
+			</a>
+			<ul class="dropdown-menu">
+				<li>
+					<label for="tab03">@fat</label>
+				</li>
+				<li>
+					<label for="tab04">@mdo</label>
+				</li>
+			</ul>
 		</li>
 	</ul>
 	<div class="tab-content">
@@ -37,7 +49,12 @@
 			Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.
 		</div>
 		<div class="tab-pane fade">
-			tab02
+			@fat
+			<h3>Menu 1</h3>
+			<p>Some content in menu 1.</p>
+		</div>
+		<div class="tab-pane fade">
+			@mdo
 			<h3>Menu 2</h3>
 			<p>Some content in menu 2.</p>
 		</div>
