--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<script src="http://livereload:35729/livereload.js"></script>
 </head>
 <body>
@@ -14,7 +14,7 @@
 
 <!--tabs-->
 
-<section data-exalt="tabs">
+<section data-exalt="tabs bottom">
 	<input class="exalt" type="radio" name="tabs" id="tab00" value="tab00" checked="checked"/>
 	<input class="exalt" type="radio" name="tabs" id="tab01" value="tab01"/>
 	<input class="exalt" type="radio" name="tabs" id="tab02" value="tab02"/>
