--- a/index.html
+++ b/index.html
@@ -70,24 +70,61 @@
 </label>
 
 <section data-exalt="modal">
-	<input type="checkbox" name="modal" id="modal" />
-	<label for="modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+	<input type="checkbox" name="modal" id="modal"/>
+	<dialog for="modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+		<label for="modal" class="modal-backdrop"></label>
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<modal for="modal" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span></modal>
 					<h4 class="modal-title" id="modalLabel">Modal title</h4>
 				</div>
 				<div class="modal-body">
-					...
+					<h1>HTML Ipsum Presents</h1>
+
+					<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac
+						turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+						Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris
+						placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat
+						wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit
+						eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
+						<a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+
+					<h2>Header Level 2</h2>
+
+					<ol>
+						<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+						<li>Aliquam tincidunt mauris eu risus.</li>
+					</ol>
+
+					<blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at
+						felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend,
+						libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam.
+						Vivamus pretium ornare est.</p></blockquote>
+
+					<h3>Header Level 3</h3>
+
+					<ul>
+						<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+						<li>Aliquam tincidunt mauris eu risus.</li>
+					</ul>
+
+					<pre><code>
+					#header h1 a {
+						display: block;
+						width: 300px;
+						height: 80px;
+					}
+					</code></pre>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<label for="modal" class="btn btn-default">Close</label>
 					<button type="button" class="btn btn-primary">Save changes</button>
 				</div>
 			</div>
 		</div>
-	</label>
+	</dialog>
 </section>
 
 <!--/tabs-->
