--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!--/global-variables-->
 
-<!--tabs
+<!--tabs--
 
 <section data-exalt="tabs bottom">
 	<input class="exalt" type="radio" name="tabs" id="tab00" value="tab00" checked="checked"/>
@@ -61,7 +61,7 @@
 	</div>
 </section>
 
-/tabs-->
+--/tabs-->
 
 <!--modal-->
 
@@ -71,56 +71,58 @@
 
 <section data-exalt="modal">
 	<input type="checkbox" name="modal" id="modal"/>
-	<dialog for="modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
-		<label for="modal" class="modal-backdrop"></label>
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<modal for="modal" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span></modal>
-					<h4 class="modal-title" id="modalLabel">Modal title</h4>
-				</div>
-				<div class="modal-body">
-					<h1>HTML Ipsum Presents</h1>
+	<dialog>
+		<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+			<label for="modal" class="modal-backdrop"></label>
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<label for="modal" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span></label>
+						<h4 class="modal-title" id="modalLabel">Modal title</h4>
+					</div>
+					<div class="modal-body">
+						<h1>HTML Ipsum Presents</h1>
 
-					<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac
-						turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
-						Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris
-						placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat
-						wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit
-						eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
-						<a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+						<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac
+							turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+							Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris
+							placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat
+							wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit
+							eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
+							<a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
 
-					<h2>Header Level 2</h2>
+						<h2>Header Level 2</h2>
 
-					<ol>
-						<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-						<li>Aliquam tincidunt mauris eu risus.</li>
-					</ol>
+						<ol>
+							<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+							<li>Aliquam tincidunt mauris eu risus.</li>
+						</ol>
 
-					<blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at
-						felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend,
-						libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam.
-						Vivamus pretium ornare est.</p></blockquote>
+						<blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at
+							felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend,
+							libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam.
+							Vivamus pretium ornare est.</p></blockquote>
 
-					<h3>Header Level 3</h3>
+						<h3>Header Level 3</h3>
 
-					<ul>
-						<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-						<li>Aliquam tincidunt mauris eu risus.</li>
-					</ul>
+						<ul>
+							<li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+							<li>Aliquam tincidunt mauris eu risus.</li>
+						</ul>
 
-					<pre><code>
-					#header h1 a {
-						display: block;
-						width: 300px;
-						height: 80px;
-					}
-					</code></pre>
-				</div>
-				<div class="modal-footer">
-					<label for="modal" class="btn btn-default">Close</label>
-					<button type="button" class="btn btn-primary">Save changes</button>
+						<pre><code>
+						#header h1 a {
+							display: block;
+							width: 300px;
+							height: 80px;
+						}
+						</code></pre>
+					</div>
+					<div class="modal-footer">
+						<label for="modal" class="btn btn-default">Close</label>
+						<button type="button" class="btn btn-primary">Save changes</button>
+					</div>
 				</div>
 			</div>
 		</div>
